# imc-prosperity-3-backtester

./: README.md  pyproject.toml
.github/workflows/: build.yml
prosperity3bt/: __main__.py  data.py  datamodel.py  file_reader.py  models.py  runner.py
prosperity3bt/resources/round0/: prices_round_0_day_-2.csv
prosperity3bt/resources/round6/: README.md
prosperity3bt/resources/round7/: README.md
