[project]
name = "prosperity3bt"
description = "Backtester for IMC Prosperity 3 algorithms"
version = "0.0.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Jasper van Merle", email = "jaspervmerle@gmail.com"}]
keywords = ["imc", "prosperity", "backtest", "backtester"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = ["ipython", "jsonpickle", "orjson", "tqdm"]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
prosperity3bt = "prosperity3bt.__main__:main"

[project.urls]
Repository = "https://github.com/jmerle/imc-prosperity-3-backtester"
Issues = "https://github.com/jmerle/imc-prosperity-3-backtester/issues"
Changelog = "https://github.com/jmerle/imc-prosperity-3-backtester/releases"

[tool.setuptools.packages.find]
include = ["prosperity3bt", "prosperity3bt.*"]

[tool.setuptools.package-data]
prosperity3bt = ["resources/*/*.csv"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prosperity3bt.datamodel"
ignore_errors = true
